test/resources/typer/failing/FunctionCalls3.grading.amy
object FunctionCall
  def foo(i: Int(32), b: Boolean): Boolean = i < 0 end foo
  
  foo(true, 1)
end FunctionCall
